--- a/config/theme.ini
+++ b/config/theme.ini
@@ -13,10 +13,16 @@ helpers[] = pageUrls
 helpers[] = getItem
 
 [config]
-elements.item_set_id_monde.name = "item_set_id_monde"
-elements.item_set_id_monde.id = "item_set_id_monde"
-elements.item_set_id_monde.type = "Omeka\Form\Element\HtmlTextarea"
-elements.item_set_id_monde.options.label = "Id item for Monde"
-elements.item_set_id_monde.options.info = "Saisissez l'identifiant de la collection des Mondes"
-elements.item_set_id_monde.attributes.value = 0
+elements.item_action.name = "item_action"
+elements.item_action.id = "item_action"
+elements.item_action.type = "Omeka\Form\Element\HtmlTextarea"
+elements.item_action.options.label = "Id item for Action"
+elements.item_action.options.info = "Saisissez l'identifiant pour l'action de départ"
+elements.item_action.attributes.value = 6564
 
+elements.item_cribleemo.name = "item_cribleemo"
+elements.item_cribleemo.id = "item_cribleemo"
+elements.item_cribleemo.type = "Omeka\Form\Element\HtmlTextarea"
+elements.item_cribleemo.options.label = "Id item for Crible emotion"
+elements.item_cribleemo.options.info = "Saisissez l'identifiant pour le crible des émotions"
+elements.item_cribleemo.attributes.value = 7300
